src/objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_QPConfig__IsPrimaryLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the product or option</description>
        <label>Is Primary Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__IsPrimaryRampLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the price ramp. Only applicable when price ramp is in effect for the product or option</description>
        <inlineHelpText>Indicates whether the line is the primary line for the price ramp. Only applicable when price ramp is in effect for the product or option</inlineHelpText>
        <label>Is Primary Ramp Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__IsUsageTierModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the usage price tier is modifiable for the product or option</description>
        <inlineHelpText>Indicates whether the usage price tier is modifiable for the product or option</inlineHelpText>
        <label>Is Usage Tier Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ItemSequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sequence of items belonging to a line</description>
        <label>Item Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LineStatus__c</fullName>
        <description>The line status</description>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Incremented</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Upgraded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product/Service</fullName>
                    <default>true</default>
                    <label>Product/Service</label>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ListPrice__c</fullName>
        <description>The list price for the product or service with no adjustments</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__NetAdjustmentPercent__c</fullName>
        <description>The net adjustment percent</description>
        <label>Net Adjustment (%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__NetPrice__c</fullName>
        <description>The net price for the product or service is the Adjusted Price after applying the Group Adjustment %</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__NetUnitPrice__c</fullName>
        <description>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</description>
        <inlineHelpText>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</inlineHelpText>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__OptionCost__c</fullName>
        <description>The rolled up extended cost of options for the product</description>
        <inlineHelpText>The rolled up extended cost of options for the product</inlineHelpText>
        <label>Option Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__OptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected option</description>
        <label>Option</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Proposal Option Line Items</relationshipLabel>
        <relationshipName>ProposalOptionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__OptionPrice__c</fullName>
        <description>The rolled up adjusted price of options for the product</description>
        <label>Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__OrderedQuantity__c</fullName>
        <description>The Total quantity for which sales orders have been created against the quote/proposal line item when the order is accepted</description>
        <inlineHelpText>The Total quantity for which sales orders have been created against the quote/proposal line item when the order is accepted</inlineHelpText>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ParentBundleNumber__c</fullName>
        <description>Represents the parent bundle number associated with the child bundle</description>
        <inlineHelpText>Represents the parent bundle number associated with the child bundle</inlineHelpText>
        <label>Parent Bundle Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the quote/proposal</description>
        <inlineHelpText>ID of the payment term associated with the quote/proposal</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceAdjustmentAmount__c</fullName>
        <description>The price adjustment amount</description>
        <label>Price Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceAdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Price Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceAdjustment__c</fullName>
        <description>The price adjustment is computed using aggregate price rules</description>
        <label>Price Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceGroup__c</fullName>
        <description>The price group associated with the product or option</description>
        <inlineHelpText>The price group associated with the product or option</inlineHelpText>
        <label>Price Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Ramp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceIncludedInBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the option price is included in the bundle. Only applicable to Option line types.</description>
        <inlineHelpText>Indicates whether the option price is included in the bundle. Only applicable to Option line types.</inlineHelpText>
        <label>Price Included In Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the price list associated with the product or service</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceListItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list item</description>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceMethod__c</fullName>
        <description>The price method</description>
        <label>Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Related Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceType__c</fullName>
        <description>The price type</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceUom__c</fullName>
        <description>The pricing unit of measure for the product</description>
        <label>Pricing Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PricingDate__c</fullName>
        <description>The pricing date, The product list price is determined based on this date.</description>
        <inlineHelpText>The pricing date, The product list price is determined based on this date.</inlineHelpText>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PrimaryLineNumber__c</fullName>
        <description>Represents the unique number for each primary line item</description>
        <inlineHelpText>Represents the unique number for each primary line item</inlineHelpText>
        <label>Primary Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProductOptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product option</description>
        <label>Product Option</label>
        <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PurchaseId__c</fullName>
        <description>The purchase identifier associated with the asset</description>
        <externalId>true</externalId>
        <inlineHelpText>The purchase identifier associated with the asset</inlineHelpText>
        <label>Purchase Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Quantity2__c</fullName>
        <description>The product or service quantity</description>
        <label>Quantity (2)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ReadyForActivationDate__c</fullName>
        <description>The date the order item is ready for activation. The order item is activated on this date.</description>
        <inlineHelpText>The date the order item is ready for activation. The order item is activated on this date.</inlineHelpText>
        <label>Ready For Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ReadyForBillingDate__c</fullName>
        <description>The date when the order item is ready for billing. The billing schedules are created on this date.</description>
        <inlineHelpText>The date when the order item is ready for billing. The billing schedules are created on this date.</inlineHelpText>
        <label>Ready For Billing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ReadyForFulfillmentDate__c</fullName>
        <description>The date the order item is ready for fulfillment. The order item is fulfilled on this date.</description>
        <inlineHelpText>The date the order item is ready for fulfillment. The order item is fulfilled on this date.</inlineHelpText>
        <label>Ready For Fulfillment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ReadyForRevRecDate__c</fullName>
        <description>The date when the order item is ready for revenue recognition. The revenue schedules are created on this date.</description>
        <inlineHelpText>The date when the order is order item for revenue recognition. The revenue schedules are created on this date.</inlineHelpText>
        <label>Ready For Revenue Recognition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__RenewalAdjustmentAmount__c</fullName>
        <description>The renewal price adjustment amount.</description>
        <inlineHelpText>The renewal price adjustment amount.</inlineHelpText>
        <label>Renewal Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__RenewalAdjustmentType__c</fullName>
        <description>The renewal price adjustment type</description>
        <inlineHelpText>The renewal price adjustment type</inlineHelpText>
        <label>Renewal Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Uplift</fullName>
                </value>
                <value>
                    <fullName>Uplift Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__SellingFrequency__c</fullName>
        <description>The selling frequency associated with the recurring or usage price</description>
        <label>Selling Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__SellingTerm__c</fullName>
        <description>The selling term associated with the product or service</description>
        <label>Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__SellingUom__c</fullName>
        <description>The selling unit of measure for the product</description>
        <inlineHelpText>The selling unit of measure for the product</inlineHelpText>
        <label>Selling Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ServiceLocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated service location</description>
        <inlineHelpText>ID of the associated service location</inlineHelpText>
        <label>Service Location</label>
        <referenceTo>Apttus_Config2__ServiceLocation__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account associated with the line item</description>
        <inlineHelpText>ID of the ship to account associated with the line item</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Line Items (Ship To)</relationshipLabel>
        <relationshipName>QuoteLineItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__StartDate__c</fullName>
        <description>The start date for products and services</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__SummaryGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the summary group associated with the item</description>
        <label>Summary Group</label>
        <referenceTo>Apttus_QPConfig__ProposalSummaryGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the line item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the line item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item is taxable</description>
        <inlineHelpText>Indicates whether the line item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Term__c</fullName>
        <description>The pricing term associated with the product or service</description>
        <label>Pricing Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__TotalQuantity__c</fullName>
        <description>The total quantity is Quantity + Asset Quantity</description>
        <inlineHelpText>The total quantity is Quantity + Asset Quantity</inlineHelpText>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Uom__c</fullName>
        <description>The product or service unit of measure</description>
        <label>Product Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Proposal Line Item</label>
    <nameField>
        <displayFormat>QL-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>